# fastap

./: .gitignore  .history  README.md  pyproject.toml  requirements.txt  runcbeat.py  runcelery.py  runcworker.py  runserver.py  setup.py
app/: __init__.py  main.py
app/api/: __init__.py  response.py  status.py
app/api/default/: aping.py  ping.py
app/api/v1/: user.py
app/atask/: __init__.py
app/business/: user.py
app/dschema/: __init__.py  user.py
app/initializer/: __init__.py  _conf.py  _db.py  _log.py  context.py
app/middleware/: __init__.py  auth.py  cors.py  exception.py  headers.py
app/model/: user.py
app/models/: __init__.py  user.py
app/schema/: __init__.py  user.py
app/schemas/: user.py
app/service/: user.py
app/services/: __init__.py  user.py
app/utils/: db_async.py
app_celery/: README.md  __init__.py  conf.py  requirements.txt
app_celery/consumer/: __init__.py
app_celery/consumer/tasks/: __init__.py  aping.py  beat_ping.py  ping.py
app_celery/consumer/workers/: __init__.py  aping.py  beat_ping.py  beats.py  ping.py
app_celery/producer/: __init__.py  publisher.py  registry.py  tests.py
config/: .env  app_dev.yaml  app_prod.yaml  app_test.yaml
fastapi_scaff/: __main__.py  _api_tpl.json  _project_tpl.json
fastapi_scaff/mgr/: mgr.py
fastapi_scaff/mgr/_api_tpl/: a_app_api.py  abd_app_api.py  abd_app_business.py  abd_app_dschema.py  as_app_api.py  as_app_schema.py  asm_app_api.py  asm_app_service.py  asm_app_services.py  only_app_api.py  only_app_model.py  only_app_models.py  only_app_schemas.py  only_app_service.py
